array.island.Island.scala.error
Compilation error:
Island:10: error: ')' expected but '}' found.
  }
  ^